5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1793_1615.log
== TEST (2019-05-30 18:09:05) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
print(t)		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:10:42) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
h=0
r=0
while(size(x)>h):
	if(x[h]==1):
		r=r+40
		h=h+1
	elif(x[h]==2):
		r=r+20
		h=h+1
	elif(x[h]==3):
		r=r+10
		h=h+1
	elif(x[h]==4):
		r=r+0
		h=h+1
print(t)
print(r)
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:51) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
h=0
r=0
while(size(x)>h):
	if(x[h]==1):
		r=r+40
		h=h+1
	elif(x[h]==2):
		r=r+20
		h=h+1
	elif(x[h]==3):
		r=r+10
		h=h+1
	elif(x[h]==4):
		r=r+0
		h=h+1

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:12:16) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
h=0
r=0
while(size(x)>h):
	if(x[h]==1):
		r=r+40
		h=h+1
	elif(x[h]==2):
		r=r+20
		h=h+1
	elif(x[h]==3):
		r=r+10
		h=h+1
	elif(x[h]==4):
		r=r+0
		h=h+1
print(t,r)		

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:12:52) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
h=0
r=0
while(size(x)>h):
	if(x[h]==1):
		r=r+40
		h=h+1
	elif(x[h]==2):
		r=r+20
		h=h+1
	elif(x[h]==3):
		r=r+10
		h=h+1
	elif(x[h]==4):
		r=r+0
		h=h+1
print(t,r)		

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:13:36) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
h=0
r=0
while(size(x)>h):
	if(x[h]==1):
		r=r+40
		h=h+1
	elif(x[h]==2):
		r=r+20
		h=h+1
	elif(x[h]==3):
		r=r+10
		h=h+1
	elif(x[h]==4):
		r=r+0
		h=h+1
print(t,r)		

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
print(10+40+40+0+20+40)
print(20+0+40+20+10+10)
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:14:14) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
print(t)
h=0
r=0
while(size(x)>h):
	if(x[h]==1):
		r=r+40
		h=h+1
	elif(x[h]==2):
		r=r+20
		h=h+1
	elif(x[h]==3):
		r=r+10
		h=h+1
	elif(x[h]==4):
		r=r+0
		h=h+1
print(t,r)		

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
print(10+40+40+0+20+40)
print(20+0+40+20+10+10)
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:15:05) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")

	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:15:21) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")

	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:16:20) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")

	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:16:25) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")

	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:22:44) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")

	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:44:06) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
h=0
r=0
while(size(x)>h):
	if(x[h]==1):
		r=r+40
		h=h+1
	elif(x[h]==2):
		r=r+20
		h=h+1
	elif(x[h]==3):
		r=r+10
		h=h+1
	elif(x[h]==4):
		r=r+0
		h=h+1

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	
		
		
		
-- EXECUTION TIME:
0.428847
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
EMPATE
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:02:54) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:03:20) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:03:42) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:04:24) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:10:12) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:13:07) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:13:20) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
elif(r==t):
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:13:35) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]>=4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
elif(r==t):
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:37) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")

	
		
		
		
-- EXECUTION TIME:
1.13581
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:37) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")

	
		
		
		
-- EXECUTION TIME:
1.57082
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:37) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")

	
		
		
		
-- EXECUTION TIME:
6.88095
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
Digite o primeiro jogador: Digite o segundo jogador: JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
Digite o primeiro jogador: Digite o segundo jogador:
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:37) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")

	
		
		
		
-- EXECUTION TIME:
4.32731
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:37) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")

	
		
		
		
-- EXECUTION TIME:
7.12751
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
Digite o primeiro jogador: Digite o segundo jogador: JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
Digite o primeiro jogador: Digite o segundo jogador:
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:37) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")

	
		
		
		
-- EXECUTION TIME:
7.95964
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:38) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")

	
		
		
		
-- EXECUTION TIME:
8.69907
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:38) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- EXECUTION TIME:
10.2387
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:38) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- EXECUTION TIME:
14.8265
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:38) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- EXECUTION TIME:
8.74558
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:38) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- EXECUTION TIME:
12.3516
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:38) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")

	
		
		
		
-- EXECUTION TIME:
3.67656
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:38) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")

	
		
		
		
-- EXECUTION TIME:
2.99391
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:38) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")

	
		
		
		
-- EXECUTION TIME:
4.04241
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:38) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")

	
		
		
		
-- EXECUTION TIME:
7.2851
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
Digite o primeiro jogador: Digite o segundo jogador: JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
Digite o primeiro jogador: Digite o segundo jogador:
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:38) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	
	
	

	
	
		
		
		
-- EXECUTION TIME:
9.05957
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
Digite o primeiro jogador: Digite o segundo jogador:
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:38) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- EXECUTION TIME:
14.3616
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
Digite o primeiro jogador: Digite o segundo jogador: JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:40) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]>=4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
elif(r==t):
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- EXECUTION TIME:
1.44605
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
JOGADOR UM
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
JOGADOR UM
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:13:57) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]>=4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:14:36) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]>=4):
		r=r+0
		h=h+1
print(t,r)	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:15:02) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]>=4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]>=4):
		r=r+0
		h=h+1
print(t,r)	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:15:19) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]>=4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]>=4):
		r=r+0
		h=h+1
print(t,r)	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- EXECUTION TIME:
2.23071
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
110 140
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
110 110
EMPATE
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
110 140
JOGADOR DOIS
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:15:25) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]>=4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]>=4):
		r=r+0
		h=h+1


if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:15:27) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]>=4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]>=4):
		r=r+0
		h=h+1


if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- EXECUTION TIME:
3.33185
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
EMPATE
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
JOGADOR UM
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:15:28) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]>=4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]>=4):
		r=r+0
		h=h+1


if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- EXECUTION TIME:
2.72801
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
EMPATE
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
JOGADOR UM
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:16:18) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- EXECUTION TIME:
0.360004
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:289: creating new parent process caused "container_linux.go:1657: running lstat on namespace path \"/proc/159940/ns/ipc\" caused \"lstat /proc/159940/ns/ipc: no such file or directory\"": unknown
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:16:18) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]==4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
elif(r==t):
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- EXECUTION TIME:
1.00851
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
Digite o primeiro jogador: Digite o segundo jogador:
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:16:18) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]==4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]>=4):
		r=r+0
		h=h+1
	

if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- EXECUTION TIME:
1.76239
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:16:55) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]>=4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]>=4):
		r=r+0
		h=h+1


if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	

	
	
		
	
	
		
		
		
-- EXECUTION TIME:
0.422794
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
EMPATE
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
JOGADOR UM
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:22:41) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]>=4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]>=4):
		r=r+0
		h=h+1


if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	
x=array(eval(input('DISIDF')))
x[0]=str(x[0])
	

	
	
		
	
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:22:47) 
-- CODE:
from numpy import*
x=array(eval(input("Digite o primeiro jogador: ")))
y=array(eval(input("Digite o segundo jogador: ")))
t=0
h=0
while(size(x)>h):
	if(x[h]==1):
		t=t+40
		h=h+1
	elif(x[h]==2):
		t=t+20
		h=h+1
	elif(x[h]==3):
		t=t+10
		h=h+1
	elif(x[h]>=4):
		t=t+0
		h=h+1
r=0
h=0
while(size(x)>h):
	if(y[h]==1):
		r=r+40
		h=h+1
	elif(y[h]==2):
		r=r+20
		h=h+1
	elif(y[h]==3):
		r=r+10
		h=h+1
	elif(y[h]>=4):
		r=r+0
		h=h+1


if(t>r):
	print("JOGADOR UM")
elif(r>t):
	print("JOGADOR DOIS")
else:
	print("EMPATE")
	
x=array(eval(input('DISIDF')))
x[0]=str(x[0])
print(x[0])
	

	
	
		
	
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:23:06) 
-- CODE:

x=array(eval(input('DISIDF')))
x[0]=str(x[0])
print(x[0])
	

	
	
		
	
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:23:16) 
-- CODE:
from numpy import*
x=array(eval(input('DISIDF')))
x[0]=str(x[0])
print(x[0])
	

	
	
		
	
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:23:36) 
-- CODE:
from numpy import*
x=array(eval(input('DISIDF')))
x[0]=str(x[0]).upper()
print(x[0])
	

	
	
		
	
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:23:48) 
-- CODE:
from numpy import*
x=array(eval(input('DISIDF')))
x[0]=str(x[0]).upper()
print(x[0])
	

	
	
		
	
	
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
